Được tạo bằng Colaboratory

--- a/BaiTap_f_test.ipynb
+++ b/BaiTap_f_test.ipynb
@@ -78,10 +78,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "Jl3YMjlSrTPR",
-        "outputId": "225f0c3b-aac4-48d1-c3f8-592a116c9c38",
+        "outputId": "aa10d0aa-095e-4a4a-d124-b9484462cff6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -97,6 +97,7 @@
         }
       ],
       "source": [
+        "import math\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import random\n",
@@ -287,10 +288,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "DbdqoNfMrTPb",
-        "outputId": "3311b62c-c1be-40f5-f1c0-2f293f7e3391",
+        "outputId": "cbb0bdf1-1aa0-4f28-dfbe-f7224e022bcb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -300,15 +301,15 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[16.75059791 16.98880529 16.41571118 14.65366706 17.09333014 16.77878348\n",
-            " 17.80377009 15.69505152 15.45428392 16.4887523  14.39527133 17.51453747\n",
-            " 17.77832266 16.97295136 16.7675681  16.50427297 14.28322533 16.82682894\n",
-            " 16.31516113 18.09065229 18.46102305 17.08180237 16.18174918 15.79956807\n",
-            " 17.40964713 15.91766517 16.06382439 17.0020082  14.31442624 15.86603716\n",
-            " 17.23797777 15.56407947 17.78439191 15.68711838 16.59613754 17.66875124\n",
-            " 17.15345707 17.51441924 16.12525873 15.41195522 16.75628327 16.75885116\n",
-            " 17.14811341 18.98234621 17.70181626 17.64682279 14.83442966 15.07116994\n",
-            " 17.36185235 17.61511962]\n"
+            "[17.9997101  16.47139147 13.17500807 15.36453635 13.71533898 15.74120005\n",
+            " 14.15158681 14.78032718 17.63937653 19.18860172 17.20116957 17.68884349\n",
+            " 18.36335221 15.74278771 20.25023446 15.86407812 13.48391982 14.4408196\n",
+            " 15.83303279 13.95631605 16.25243594 18.95083351 16.19144687 16.28683365\n",
+            " 20.67153095 22.14726669 17.77570952 16.23072528 12.98856964 18.70397678\n",
+            " 19.44531633 12.85216884 16.22838821 17.19424658 15.9667298  17.17270952\n",
+            " 17.22417874 14.50843897 18.64952606 15.99777826 16.52489173 15.90255177\n",
+            " 16.42567316 17.34291089 18.02593261 15.49929865 16.24807577 17.95891733\n",
+            " 18.9614515  17.93507297]\n"
           ]
         }
       ],
@@ -317,7 +318,7 @@
         "mean_1 = 16.4\n",
         "std_1 = 1.1\n",
         "N_1 = 50\n",
-        "samples_1 = np.random.normal(mean_1, std_1, N_1)\n",
+        "samples_1 = np.random.normal(mean_1, (std_1*2), N_1)\n",
         "print(samples_1)"
       ]
     },
@@ -328,31 +329,31 @@
         "mean_2= 15.6\n",
         "std_2 = 1.2\n",
         "N_2 = 50\n",
-        "samples_2 = np.random.normal(mean_2, std_2, N_2)\n",
+        "samples_2 = np.random.normal(mean_2, (std_2*2), N_2)\n",
         "print(samples_2)"
       ],
       "metadata": {
         "id": "u78ZA-C66TS6",
-        "outputId": "29aa954f-1348-4b93-ee9a-5f35721b01e6",
+        "outputId": "45e05194-7480-44f7-dbd5-23b29f080e7e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[16.51058945 16.45231152 14.56733445 16.81642148 12.70764563 15.2237631\n",
-            " 16.33451244 16.47157798 14.95109096 17.7244204  15.23878595 14.86658766\n",
-            " 14.52861254 16.0274359  14.47824977 16.90368245 14.96200489 14.92961152\n",
-            " 15.68005185 13.85664221 16.1056583  15.9950884  14.96043662 14.15037255\n",
-            " 15.7375749  15.20821379 15.88023182 14.57743685 18.46409768 11.77889851\n",
-            " 14.9916796  16.57700686 18.341465   15.1196085  13.18797876 14.72361999\n",
-            " 15.19034229 14.95729259 15.69094302 14.58517213 16.76321436 15.5913514\n",
-            " 16.877879   14.63630213 11.71359308 15.41141265 17.4878942  15.05193107\n",
-            " 16.66887776 16.48010121]\n"
+            "[16.5477022  15.43123304 16.0583138  15.55103777 14.89016922 15.74306053\n",
+            " 12.49545247 11.88982328 16.61048437 13.93877697 15.99795786 15.86497126\n",
+            " 17.08833524 15.3668383  12.95884996 14.44147074 17.86428143 14.02750358\n",
+            " 15.26125464 15.72598231 17.66637023 17.33767171 14.51784134 11.29739327\n",
+            " 10.69987862 12.45156617 13.24683017 17.29631933 15.9057587  13.07604665\n",
+            " 14.20391113 12.0388405  17.7681498  16.66991847 21.21853142 17.01015204\n",
+            " 18.89590394 13.788714   15.00513704 12.49553793 17.99733494 15.00104581\n",
+            " 15.60037817 17.38204344 14.63899471 16.44619528 14.46432265 18.14198897\n",
+            " 16.02536181 12.55295155]\n"
           ]
         }
       ]
@@ -380,7 +381,7 @@
       "metadata": {
         "id": "95w1e1Oy6egU"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -391,12 +392,12 @@
       ],
       "metadata": {
         "id": "NGpv7yR-7teR",
-        "outputId": "b443ec2c-4c49-4837-cba7-86706c045937",
+        "outputId": "eadc85e1-02bb-46f1-ea30-25769c93e2b2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
