Được tạo bằng Colaboratory

--- a/BaiTap_f_test.ipynb
+++ b/BaiTap_f_test.ipynb
@@ -256,7 +256,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Một công ty T nghiên cứu mức độ phát thải ôxít cacbon xảy ra từ 2 nhãn hiệu thuốc lá khác nhau và liệu mức độ độc hại của nhãn hiệu X có cao hơn nhãn hiệu Y hay không. Ta có các dữ liệu đã được thu thập như sau:\n",
+        "Một công ty T nghiên cứu mức độ phát thải ôxít cacbon xảy ra từ 2 nhãn hiệu thuốc lá khác nhau và liệu mức độ độc hại của nhãn hiệu X có thap hơn nhãn hiệu Y hay không. Ta có các dữ liệu đã được thu thập như sau:\n",
         "\\begin{array}{|c|c|} \\hline\n",
         " & X & Y  \\\\ \\hline\n",
         "Sample size & 50 & 50  \\\\ \\hline\n",
