--- a/Du_lieu_ANOVA.ipynb
+++ b/Du_lieu_ANOVA.ipynb
@@ -33,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "PS1Y_7Wtt0AX"
       },
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "nBlRif4yt0Aa"
       },
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "vOSjdMTgt0Ab",
         "outputId": "a34ef4a2-b86b-4579-c75f-0ac82f08fa4a",
@@ -234,7 +234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "E_lIY2gBt0Af",
         "colab": {
@@ -305,7 +305,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "MDfa0eezt0Ai",
         "colab": {
@@ -590,10 +590,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "* Phát biểu bài toán: Dữ liệu về độ quan tâm khi lựa chọn các ngành học: kinh doanh, Anh, Toán, Tâm Lí học. Kiểm tra mối quan hệ giữa ngành học và độ quan tâm khi chọn ngành học của 35 sinh viên trong mỗi ngành.\n",
+        "* Phát biểu bài toán: Dữ liệu về độ thất vọng khi lựa chọn các ngành học: kinh doanh, Anh, Toán, Tâm Lí học. Kiểm tra mối quan hệ giữa ngành học và độ thất vọng khi chọn ngành học của 35 sinh viên trong mỗi ngành.\n",
         "* Phát biểu giả thuyết:\n",
-        "  - Null: Không có sự khác biệt về độ quan tâm khi chọn ngành của sinh viên các ngành.\n",
-        "  - Giả thuyết thay thế: Có sự khác biệt về độ quan tâm khi chọn ngành của sinh viên các ngành"
+        "  - Null: Không có sự khác biệt về độ thất vọng khi chọn ngành của sinh viên các ngành.\n",
+        "  - Giả thuyết thay thế: Có sự khác biệt về độ thất vọng khi chọn ngành của sinh viên các ngành"
       ],
       "metadata": {
         "id": "76GXD4hnx3S2"
@@ -601,7 +601,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "HYsCW-Emt0Ap"
       },
@@ -634,7 +634,7 @@
         "id": "M0DvhQWizuQH",
         "outputId": "a63cb637-4005-42f9-d057-163c6c0968fe"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
