--- a/Phần_Suy_Diễn_Thống_Kê.ipynb
+++ b/Phần_Suy_Diễn_Thống_Kê.ipynb
@@ -45,7 +45,7 @@
         },
         "outputId": "abae5aa0-d84f-4a50-abed-e5672e0a7f75"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -70,7 +70,7 @@
         "id": "_o7d6wezmEXF",
         "outputId": "5c9f408e-81a3-4ebd-de61-9c67203d2953"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -364,7 +364,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "* Tiến hành kiểm định theo từng chế độ ăn kiêng khác nhau (có 3 loại)"
+        "###* Tiến hành kiểm định theo từng chế độ ăn kiêng khác nhau (có 3 loại)"
       ],
       "metadata": {
         "id": "Gxi7kon1RrS_"
@@ -405,7 +405,7 @@
         "id": "nc3PEFA3OsDF",
         "outputId": "c896f60e-a460-4f8e-c27c-5a5865348c04"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -798,6 +798,22 @@
     {
       "cell_type": "markdown",
       "source": [
+        "###**Phát biểu giả thuyết:** (với mức ý nghĩa α = 0,05)\n",
+        "$$H_{0} : \\mu_{pre_w} = \\mu_{W_6}$$\n",
+        "\n",
+        "$$H_{A} : \\text{Có tối thiểu một cặp giá trị trung bình có giá trị khác nhau} $$\n",
+        "\n",
+        "Giả thuyết gốc: \"Không có sự khác biệt về giá trị trung bình của cân nặng trước và sau 6 tuần ăn kiêng\"\n",
+        "\n",
+        "Giả thuyết thay thế: \"Có sự khác biệt về giá trị trung bình của cân nặng trước và sau 6 tuần ăn kiêng\""
+      ],
+      "metadata": {
+        "id": "NFS48gBCCaX6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**Tiến hành kiểm định các điều kiện *Phân phối chuẩn, phương sai*:**\n",
         "\n",
         "Phát biểu giả thuyết với mức ý nghĩa *α = 0.05*:\n",
@@ -840,7 +856,7 @@
         "id": "E4LP5bg067X3",
         "outputId": "652842d0-edae-44e8-ed95-e1ced3b1d04c"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -866,22 +882,6 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "###**Phát biểu giả thuyết:** (với mức ý nghĩa α = 0,05)\n",
-        "$$H_{0} : \\mu_{pre_w} = \\mu_{W_6}$$\n",
-        "\n",
-        "$$H_{A} : \\text{Có tối thiểu một cặp giá trị trung bình có giá trị khác nhau} $$\n",
-        "\n",
-        "Giả thuyết gốc: \"Không có sự khác biệt về giá trị trung bình của cân nặng trước và sau 6 tuần ăn kiêng\"\n",
-        "\n",
-        "Giả thuyết thay thế: \"Có sự khác biệt về giá trị trung bình của cân nặng trước và sau 6 tuần ăn kiêng\""
-      ],
-      "metadata": {
-        "id": "NFS48gBCCaX6"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "f_stat, p_value = stats.f_oneway(df1[\"pre.weight\"], df1[\"weight6weeks\"])\n",
@@ -898,7 +898,7 @@
         "id": "USxazmOJ-EzA",
         "outputId": "934dd611-7af5-4b2c-e0ff-65c67552687a"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -933,7 +933,7 @@
         "id": "UoLXUEb3cbrF",
         "outputId": "7c89c1d7-a622-49c0-8a07-afcf994b1c2d"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -979,7 +979,7 @@
         "id": "QQL0-lECWgRl",
         "outputId": "6cce8961-9e96-4d1c-f43e-377b17b2104c"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1405,6 +1405,22 @@
     {
       "cell_type": "markdown",
       "source": [
+        "###**Phát biểu giả thuyết:** (với mức ý nghĩa α = 0,05)\n",
+        "$$H_{0} : \\mu_{pre_w} = \\mu_{W_6}$$\n",
+        "\n",
+        "$$H_{A} : \\text{Có tối thiểu một cặp giá trị trung bình có giá trị khác nhau} $$\n",
+        "\n",
+        "Giả thuyết gốc: \"Không có sự khác biệt về giá trị trung bình của cân nặng trước và sau 6 tuần ăn kiêng\"\n",
+        "\n",
+        "Giả thuyết thay thế: \"Có sự khác biệt về giá trị trung bình của cân nặng trước và sau 6 tuần ăn kiêng\""
+      ],
+      "metadata": {
+        "id": "0p1JflT-XWFv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**Tiến hành kiểm định các điều kiện *Phân phối chuẩn, phương sai*:**\n",
         "\n",
         "Phát biểu giả thuyết với mức ý nghĩa *α = 0.05*:\n",
@@ -1447,7 +1463,7 @@
         "outputId": "35b2cab5-8fc1-40d5-c55c-d8c27cab3a3e",
         "id": "71oXCnF-XGUu"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1473,22 +1489,6 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "###**Phát biểu giả thuyết:** (với mức ý nghĩa α = 0,05)\n",
-        "$$H_{0} : \\mu_{pre_w} = \\mu_{W_6}$$\n",
-        "\n",
-        "$$H_{A} : \\text{Có tối thiểu một cặp giá trị trung bình có giá trị khác nhau} $$\n",
-        "\n",
-        "Giả thuyết gốc: \"Không có sự khác biệt về giá trị trung bình của cân nặng trước và sau 6 tuần ăn kiêng\"\n",
-        "\n",
-        "Giả thuyết thay thế: \"Có sự khác biệt về giá trị trung bình của cân nặng trước và sau 6 tuần ăn kiêng\""
-      ],
-      "metadata": {
-        "id": "0p1JflT-XWFv"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "f_stat, p_value = stats.f_oneway(df2[\"pre.weight\"], df2[\"weight6weeks\"])\n",
@@ -1505,7 +1505,7 @@
         "outputId": "39881030-e4c4-4301-e5a2-ae9c50b45654",
         "id": "3c68T7OjXZQE"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1540,7 +1540,7 @@
         "id": "gD14T-uAdKv8",
         "outputId": "25a42a54-a20a-4a6c-ade8-3f246e759ba0"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1586,7 +1586,7 @@
         "outputId": "7a080bcf-c184-44a1-98a3-0e0e94de8844",
         "id": "J2KCcC98X3EB"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2012,6 +2012,22 @@
     {
       "cell_type": "markdown",
       "source": [
+        "###**Phát biểu giả thuyết:** (với mức ý nghĩa α = 0,05)\n",
+        "$$H_{0} : \\mu_{pre_w} = \\mu_{W_6}$$\n",
+        "\n",
+        "$$H_{A} : \\text{Có tối thiểu một cặp giá trị trung bình có giá trị khác nhau} $$\n",
+        "\n",
+        "Giả thuyết gốc: \"Không có sự khác biệt về giá trị trung bình của cân nặng trước và sau 6 tuần ăn kiêng\"\n",
+        "\n",
+        "Giả thuyết thay thế: \"Có sự khác biệt về giá trị trung bình của cân nặng trước và sau 6 tuần ăn kiêng\""
+      ],
+      "metadata": {
+        "id": "55x70JelYwyc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**Tiến hành kiểm định các điều kiện *Phân phối chuẩn, phương sai*:**\n",
         "\n",
         "Phát biểu giả thuyết với mức ý nghĩa *α = 0.05*:\n",
@@ -2054,7 +2070,7 @@
         "outputId": "3d078916-a6f1-4316-d72b-2b61a1d61c50",
         "id": "Ut2imH8VYcyu"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2080,22 +2096,6 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "###**Phát biểu giả thuyết:** (với mức ý nghĩa α = 0,05)\n",
-        "$$H_{0} : \\mu_{pre_w} = \\mu_{W_6}$$\n",
-        "\n",
-        "$$H_{A} : \\text{Có tối thiểu một cặp giá trị trung bình có giá trị khác nhau} $$\n",
-        "\n",
-        "Giả thuyết gốc: \"Không có sự khác biệt về giá trị trung bình của cân nặng trước và sau 6 tuần ăn kiêng\"\n",
-        "\n",
-        "Giả thuyết thay thế: \"Có sự khác biệt về giá trị trung bình của cân nặng trước và sau 6 tuần ăn kiêng\""
-      ],
-      "metadata": {
-        "id": "55x70JelYwyc"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "f_stat, p_value = stats.f_oneway(df3[\"pre.weight\"], df3[\"weight6weeks\"])\n",
@@ -2112,7 +2112,7 @@
         "outputId": "e82a02e1-1956-431d-eeca-0c183a297e00",
         "id": "-pBTpfiDYz9b"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2147,7 +2147,7 @@
         "id": "WwnuZBNjdUmY",
         "outputId": "dd3f6b29-7abf-462f-fe3c-9c1b14bdaf0f"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2196,6 +2196,22 @@
     {
       "cell_type": "markdown",
       "source": [
+        "###**Phát biểu giả thuyết:** (với mức ý nghĩa α = 0,05)\n",
+        "$$H_{0} : \\mu_{pre_w} = \\mu_{W_6}$$\n",
+        "\n",
+        "$$H_{A} : \\text{Có tối thiểu một cặp giá trị trung bình có giá trị khác nhau} $$\n",
+        "\n",
+        "Giả thuyết gốc: \"Không có sự khác biệt về giá trị trung bình của cân nặng trước và sau 6 tuần ăn kiêng\"\n",
+        "\n",
+        "Giả thuyết thay thế: \"Có sự khác biệt về giá trị trung bình của cân nặng trước và sau 6 tuần ăn kiêng\""
+      ],
+      "metadata": {
+        "id": "BR8PbkV0f5bl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**Tiến hành kiểm định các điều kiện *Phân phối chuẩn, phương sai*:**\n",
         "\n",
         "Phát biểu giả thuyết với mức ý nghĩa *α = 0.05*:\n",
@@ -2238,7 +2254,7 @@
         "outputId": "cc557e0c-9c86-4d78-d6ed-b2f5d0e06962",
         "id": "8DFv3IsEfa-T"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2264,22 +2280,6 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "###**Phát biểu giả thuyết:** (với mức ý nghĩa α = 0,05)\n",
-        "$$H_{0} : \\mu_{pre_w} = \\mu_{W_6}$$\n",
-        "\n",
-        "$$H_{A} : \\text{Có tối thiểu một cặp giá trị trung bình có giá trị khác nhau} $$\n",
-        "\n",
-        "Giả thuyết gốc: \"Không có sự khác biệt về giá trị trung bình của cân nặng trước và sau 6 tuần ăn kiêng\"\n",
-        "\n",
-        "Giả thuyết thay thế: \"Có sự khác biệt về giá trị trung bình của cân nặng trước và sau 6 tuần ăn kiêng\""
-      ],
-      "metadata": {
-        "id": "BR8PbkV0f5bl"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "f_stat, p_value = stats.f_oneway(df4[\"pre.weight\"], df4[\"weight6weeks\"])\n",
@@ -2296,7 +2296,7 @@
         "outputId": "b5d4435a-ddcc-4cd2-fbc6-f14794a8f6f1",
         "id": "zH7VG_e0gNhd"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2334,7 +2334,7 @@
         "id": "SnxBojUiga-T",
         "outputId": "37365d87-ba88-4432-9094-f0a511a96850"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2936,6 +2936,22 @@
     {
       "cell_type": "markdown",
       "source": [
+        "###**Phát biểu giả thuyết:** (với mức ý nghĩa α = 0,05)\n",
+        "$$H_{0} : \\mu_{pre_w} = \\mu_{W_6}$$\n",
+        "\n",
+        "$$H_{A} : \\text{Có tối thiểu một cặp giá trị trung bình có giá trị khác nhau} $$\n",
+        "\n",
+        "Giả thuyết gốc: \"Không có sự khác biệt về giá trị trung bình của cân nặng trước và sau 6 tuần ăn kiêng\"\n",
+        "\n",
+        "Giả thuyết thay thế: \"Có sự khác biệt về giá trị trung bình của cân nặng trước và sau 6 tuần ăn kiêng\""
+      ],
+      "metadata": {
+        "id": "gJ1aaKDRf7YC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**Tiến hành kiểm định các điều kiện *Phân phối chuẩn, phương sai*:**\n",
         "\n",
         "Phát biểu giả thuyết với mức ý nghĩa *α = 0.05*:\n",
@@ -2978,7 +2994,7 @@
         "outputId": "630a32be-7fc5-4512-e7c4-e270e394e8ce",
         "id": "fukOU54WfbjN"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3004,22 +3020,6 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "###**Phát biểu giả thuyết:** (với mức ý nghĩa α = 0,05)\n",
-        "$$H_{0} : \\mu_{pre_w} = \\mu_{W_6}$$\n",
-        "\n",
-        "$$H_{A} : \\text{Có tối thiểu một cặp giá trị trung bình có giá trị khác nhau} $$\n",
-        "\n",
-        "Giả thuyết gốc: \"Không có sự khác biệt về giá trị trung bình của cân nặng trước và sau 6 tuần ăn kiêng\"\n",
-        "\n",
-        "Giả thuyết thay thế: \"Có sự khác biệt về giá trị trung bình của cân nặng trước và sau 6 tuần ăn kiêng\""
-      ],
-      "metadata": {
-        "id": "gJ1aaKDRf7YC"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "f_stat, p_value = stats.f_oneway(df5[\"pre.weight\"], df5[\"weight6weeks\"])\n",
@@ -3036,7 +3036,7 @@
         "outputId": "5bae8eee-822f-473d-8fed-d27fb831007a",
         "id": "G9BE6yZDgSsD"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
