Được tạo bằng Colaboratory

--- a/Đọc_Dữ_liệu_từ_tập_tin.ipynb
+++ b/Đọc_Dữ_liệu_từ_tập_tin.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPua6T79SHWj6GTo9w7/iG0",
+      "authorship_tag": "ABX9TyPfETXTAESIGUk6LfeS/Et0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 60,
       "metadata": {
         "id": "RC8dlRMkKXxZ"
       },
@@ -50,45 +50,67 @@
         "  x = data[:,0]\n",
         "  y = data[:,1]\n",
         "  m = y.shape[0]\n",
-        "  x = np.stack([np.ones(m),x], axis = 1)"
+        "  x = np.stack([np.ones(m),x], axis = 1)\n",
+        "  return x,y"
       ],
       "metadata": {
         "id": "yzpHSmRGMJxF"
       },
-      "execution_count": 38,
+      "execution_count": 65,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "#Ham Mat Mat\n",
-        "def calculateLoss(X, y, w):\n",
+        "def calculateLoss(x, y, w):\n",
+        "  m = y.shape[0]\n",
         "  h = np.dot(X, w)\n",
         "  J = (1/2*m)*np.sum(np.square(h - y))\n",
-        "  w = np.argmin(J)\n",
-        "  return J, h, w"
+        "  return J, w"
       ],
       "metadata": {
         "id": "yabs5X7zQNmM"
       },
-      "execution_count": 49,
+      "execution_count": 66,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#HAm tinh Gradient Decsent\n",
-        "def  gradientDescent(X, y, w, alpha, n):\n",
+        "#Ham tinh Gradient Decsent\n",
+        "def  gradientDescent(x, y, w, alpha, n):\n",
         "  alpha = 0.01\n",
         "  n = 1500\n",
+        "  m = y.shape[0]\n",
+        "  w.option = w.duplicate()\n",
         "  for i in range (n):\n",
-        "    w = w - (alpha/m)*(np.dot(X,w) - y) * dot(x)\n",
-        "    return w"
+        "    w.option = w.option - (alpha/m)*(np.dot(X,w.option) - y) * dot(x)\n",
+        "    j.append(calculateLoss(X, y, w.option))\n",
+        "    return w.option, J"
       ],
       "metadata": {
         "id": "wvZEg3dOTV0D"
       },
-      "execution_count": 54,
+      "execution_count": 67,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def main():\n",
+        "  alpha = 0.01\n",
+        "  n = 1500\n",
+        "  w = np.zeros(2)\n",
+        "  x,y = readData('gdrive/MyDrive/Hoiquytuyentinh/', 'ex1data1.txt')\n",
+        "  w,J = gradientDecsent(x,y,w,alpha,n)\n",
+        "  print(w)\n",
+        "  print(J[-1])"
+      ],
+      "metadata": {
+        "id": "sXa_RD80b0N-"
+      },
+      "execution_count": 72,
       "outputs": []
     }
   ]
