Được tạo bằng Colaboratory

--- a/Hồi_quy_tuyến_tính_đơn_biến_Đọc_dữ_liệu_từ_tập_tin.ipynb
+++ b/Hồi_quy_tuyến_tính_đơn_biến_Đọc_dữ_liệu_từ_tập_tin.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNN2F1bwvfqXqFdybKL1qHw",
+      "authorship_tag": "ABX9TyNHsXY9WyqiJiLlU3dycMyQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,6 +54,21 @@
         "id": "gCTWRJaAqtid"
       },
       "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calculateLoss(X, y, w):\n",
+        "  h = np.dot(X, w)\n",
+        "  m = X.shape[0]\n",
+        "  J = (1/ (2*m)) * np.sum(np.square(h-y))\n",
+        "  return J"
+      ],
+      "metadata": {
+        "id": "6aLv29C_rI5z"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
