Được tạo bằng Colaboratory

--- a/Hồi_quy_tuyến_tính_đơn_biến_Đọc_dữ_liệu_từ_tập_tin.ipynb
+++ b/Hồi_quy_tuyến_tính_đơn_biến_Đọc_dữ_liệu_từ_tập_tin.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNHsXY9WyqiJiLlU3dycMyQ",
+      "authorship_tag": "ABX9TyNrVdq4mRxpnO3XDLF8Y3RH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,6 +67,26 @@
       ],
       "metadata": {
         "id": "6aLv29C_rI5z"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def gradientDescent(X, y, w, alpha, n = 1500):\n",
+        "  m = X.shape[0]\n",
+        "  w_optimal = []\n",
+        "  loss_values = []\n",
+        "  for i in range(n):\n",
+        "    w = w - (alpha/m) * (np.dot(X, w) - y ).dot(X)\n",
+        "    j = calculateLoss(X, y, w)\n",
+        "    w_optimal.append(w)\n",
+        "    loss_values.append(j)\n",
+        "  return w_optimal, loss_values"
+      ],
+      "metadata": {
+        "id": "pireLQUyrsUM"
       },
       "execution_count": null,
       "outputs": []
