Được tạo bằng Colaboratory

--- a/Hồi_quy_tuyến_tính_đơn_biến_Đọc_dữ_liệu_từ_tập_tin.ipynb
+++ b/Hồi_quy_tuyến_tính_đơn_biến_Đọc_dữ_liệu_từ_tập_tin.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNrVdq4mRxpnO3XDLF8Y3RH",
+      "authorship_tag": "ABX9TyOtlrpl+bhmcLy2ks519v3T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,6 +87,21 @@
       ],
       "metadata": {
         "id": "pireLQUyrsUM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def visualizeModel(X, y, w):\n",
+        "    plt.scatter(X[:, -1], y, color = \"red\")\n",
+        "    plt.plot(X[:, -1], w[0] + w[1] * X[:, -1], color = \"blue\")\n",
+        "    plt.title(\"Simple Linear Regression\")\n",
+        "    plt.show()"
+      ],
+      "metadata": {
+        "id": "yj5HaX3Dr0m4"
       },
       "execution_count": null,
       "outputs": []
