Được tạo bằng Colaboratory

--- a/Hồi_quy_tuyến_tính_đơn_biến_Đọc_dữ_liệu_từ_tập_tin.ipynb
+++ b/Hồi_quy_tuyến_tính_đơn_biến_Đọc_dữ_liệu_từ_tập_tin.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOtlrpl+bhmcLy2ks519v3T",
+      "authorship_tag": "ABX9TyNT+69KdM70h+qyJ+NUw3UT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,6 +102,23 @@
       ],
       "metadata": {
         "id": "yj5HaX3Dr0m4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def main():\n",
+        "   FOLDER = r'D:\\Học Kì 1 - Năm 2\\Học máy 1\\Baitap\\LinearRegression\\GradientDescent'\n",
+        "   X, y = readData(FOLDER, 'ex1data1.txt')\n",
+        "   w, loss_values = gradientDescent(X, y, [-1, 5], 0.01, 1500)\n",
+        "   w_optimal = w[-1]\n",
+        "   print(f'w_0 = {w_optimal[0]}, w_1 = {w_optimal[1]}')\n",
+        "   visualizeModel(X, y, w_optimal)"
+      ],
+      "metadata": {
+        "id": "ll63ankjsCaM"
       },
       "execution_count": null,
       "outputs": []
