Được tạo bằng Colaboratory

--- a/BTTL(4)_2.ipynb
+++ b/BTTL(4)_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9Hdq6ob8gzIBgchyvoGMj",
+      "authorship_tag": "ABX9TyO7DYyzUQxBpAQS1QtxIhB0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -205,6 +205,145 @@
         "id": "573h02USBEMk"
       },
       "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4.2.2"
+      ],
+      "metadata": {
+        "id": "yCA1yqHfBohV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def readData(folder , filename):\n",
+        "    data = np.loadtxt(os.path.join(folder, filename), delimiter = ',')\n",
+        "    X = data[:, :-1]\n",
+        "    y = data[:, -1].reshape(-1, 1)\n",
+        "    one = np.ones((X.shape[0], 1))\n",
+        "    X = np.concatenate((one, X), axis = 1)\n",
+        "    return X, y"
+      ],
+      "metadata": {
+        "id": "YAMiFEwDBr_z"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def normScaling(X):\n",
+        "  for col in range(1, X.shape[1]):\n",
+        "    temp = X[:, col]\n",
+        "    X[:, col] = (temp - np.min(temp)) / (np.max(temp) - np.min(temp))"
+      ],
+      "metadata": {
+        "id": "YF3Og23lBxDX"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def standardScaling(X):\n",
+        "  for col in range(1, X.shape[1]):\n",
+        "    temp = X[:, col]\n",
+        "    X[:, col] = (temp - np.mean(temp)) / (np.std(temp))"
+      ],
+      "metadata": {
+        "id": "baEPQjNaBzt9"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def predict(X, w):\n",
+        "    h_w = 1 / (1 + np.exp(- np.dot(X, w)))\n",
+        "    return (h_w >= 0.5).astype('int32')"
+      ],
+      "metadata": {
+        "id": "cFxWCwIJB1_G"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def costFunction(X, y ,w):\n",
+        "    m = X.shape[0]\n",
+        "    h_w = 1 / (1 + np.exp(- np.dot(X, w)))\n",
+        "    J_w = (-1/m) * (np.dot(y.T, np.log(h_w)) + np.dot((1-y).T, np.log(1-h_w)))\n",
+        "    return J_w[0, 0]"
+      ],
+      "metadata": {
+        "id": "fjvlu9I1B4V8"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def gradient(X, y, w):\n",
+        "    m = X.shape[0]\n",
+        "    h_w = 1 / (1 + np.exp(- np.dot(X, w)))\n",
+        "    return (1/m) * np.dot(X.T, h_w - y)"
+      ],
+      "metadata": {
+        "id": "Pkqg67U_B7Tc"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def gradientDescent(X, y, w_init, alpha, n = 1500):\n",
+        "    w_old = w_init.reshape(-1, 1)\n",
+        "    cost_values = []\n",
+        "    for i in range(n):\n",
+        "        w_new = w_old - alpha * gradient(X, y, w_old)\n",
+        "        cost_values.append(costFunction(X, y, w_new))\n",
+        "        w_old = w_new\n",
+        "    return w_new, cost_values"
+      ],
+      "metadata": {
+        "id": "eyvvhRQEB-Gn"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def Logicstic_Regression():\n",
+        "    X, y = readData(\"/content/gdrive/My Drive/\", 'ex2data1.txt')\n",
+        "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3,\n",
+        "                                                        random_state = 5)\n",
+        "    standardScaling(X_train)\n",
+        "    standardScaling(X_test)\n",
+        "\n",
+        "    w_init = np.zeros((X_train.shape[1], 1))\n",
+        "    w_opt, loss = gradientDescent(X=X_train,y=y_train, \n",
+        "                                           w_init=w_init, alpha=0.01, n=1500)\n",
+        "    y_pred = predict(X_test, w_opt)\n",
+        "    \n",
+        "    # Evaluate Model\n",
+        "    print(\"Đánh giá hiệu năng mô hình\")\n",
+        "    print(\"\\tAccuracy: \", accuracy_score(y_test, y_pred))"
+      ],
+      "metadata": {
+        "id": "xBkHqqcyCAT2"
+      },
+      "execution_count": 21,
       "outputs": []
     }
   ]
