Được tạo bằng Colaboratory

--- a/BTTL(4)_3.ipynb
+++ b/BTTL(4)_3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMv+1hgSypegBA13ptTzSxV",
+      "authorship_tag": "ABX9TyN4mGPE+zasDTMmF8co4dDf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -190,7 +190,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def main():\n",
+        "def LinearRegression():\n",
         "    X, y = readData(\"/content/gdrive/My Drive/\", 'ex1data2.txt')\n",
         "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3,\n",
         "                                                        random_state = 5)\n",
@@ -205,7 +205,7 @@
       "metadata": {
         "id": "96kWmCGSEq0G"
       },
-      "execution_count": 12,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -311,7 +311,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def main():\n",
+        "def LogisticRegression():\n",
         "    X, y = readData(\"/content/gdrive/My Drive/\", 'ex2data1.txt')\n",
         "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3,\n",
         "                                                        random_state = 5)\n",
