Được tạo bằng Colaboratory

--- a/BTTL(4)_5.ipynb
+++ b/BTTL(4)_5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP6yRxarttObqxqJw/LWsRT",
+      "authorship_tag": "ABX9TyMc4XtHDorZVVdUV6BZNbQF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 9,
       "metadata": {
         "id": "Xjn-Rz2yH8rT"
       },
@@ -38,6 +38,7 @@
         "import numpy as np\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import mean_squared_error\n",
+        "from sklearn.metrics import accuracy_score\n",
         "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
         "from sklearn.linear_model import LinearRegression\n",
         "from sklearn.linear_model import LogisticRegression"
@@ -81,7 +82,7 @@
       "metadata": {
         "id": "86BLe7WlIU2e"
       },
-      "execution_count": 4,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -108,7 +109,7 @@
       "metadata": {
         "id": "jES5OWHhIdid"
       },
-      "execution_count": 5,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -130,7 +131,7 @@
       "metadata": {
         "id": "wi8D5vDbIkVb"
       },
-      "execution_count": 6,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -161,7 +162,7 @@
       "metadata": {
         "id": "t8kBwTObI88W"
       },
-      "execution_count": 8,
+      "execution_count": 13,
       "outputs": []
     }
   ]
