Được tạo bằng Colaboratory

--- a/KFold_CV(2).ipynb
+++ b/KFold_CV(2).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPU7xzHBNcOMHcUKXO2COTH",
+      "authorship_tag": "ABX9TyPHYulu6wm8KvdhUrslsY7B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -130,7 +130,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def main():\n",
+        "def KFold_CV():\n",
         "    X, y = readData(\"/content/gdrive/My Drive/\", 'ex2data2.txt')\n",
         "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=15)\n",
         "    X_train, X_test = featureScaling(X_train, X_test)\n",
@@ -142,7 +142,7 @@
       "metadata": {
         "id": "SZ5WImfeNnO4"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": []
     }
   ]
